# hillview

./: .dockerignore  .env.dev  .env.example  .gitignore  AUTHENTICATION_UNIFICATION_PLAN.md  CLAUDE.md  DEVELOPMENT.md  KNOWN_ISSUES.md  LICENSE.md  README.md  bun.lockb  compose.sh  docker-compose.dev.yml  docker-compose.yml  init.sh  notes  package-lock.json  package.json  run_tests.sh  vite.config.ts
backend/: .env  (+23 more)
backend/api/app/: .env.example  Dockerfile  Dockerfile.worker  activity_routes.py  admin_routes.py  alembic.ini  annotation_routes.py  api.py  auth.py  backfill_places.py  bestof_routes.py  cache_service.py  config.py  contact_routes.py  database.py  debug_delays.py  debug_routes.py  debug_utils.py  dsl_utils.py  fcm_push.py  featured_routes.py  flagged_photos_routes.py  google.py  graduation.py  graduation_routes.py  hidden_content_filters.py  hidden_content_routes.py  hillview_routes.py  internal_debug_routes.py  internal_guard.py  jwt_service.py  logging.yaml  mapillary_routes.py  mapillary_url_utils.py  mock_mapillary.py  models.py  photo_processor.py  photo_routes.py  photos.py  prestart.sh  (+15 more)
backend/api/app/alembic/: env.py
backend/api/app/alembic/versions/: 001_initial_schema.py  002_add_file_md5_column.py  002_remove_thumbnail_path_column.py  003_remove_filepath_column.py  004_add_record_created_ts_to_photos.py  (+46 more)
backend/common/: SecurityExceptions.py  auth_utils.py  cdn_uploader.py  config.py  database.py  debug_faults.py  dotenv_loader.py  env_init.py  file_utils.py  jwt.py  jwt_utils.py  models.py  password_utils.py  pyproject.toml  security_utils.py  test_users.py  utc.py
backend/common/hillview_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: MAPILLARY_ENDPOINT_PATHS.md  conftest.py  debug_filtering.py  debug_hillview_test.py  image_utils.py  lock_util.py  pyproject.toml  requirements.txt  run_integration_tests.sh  run_tests.sh  secure_upload_utils.py  test_api.py  test_auth_edge_cases.py  test_auth_login.py  test_auth_oauth.py  test_content_filtering.py  test_hidden_db_operations.py  test_hidden_photos.py  test_hidden_users.py  test_hillview.py  test_hillview_filtering.py  test_mapillary_cache_spatial_sampling.py  test_mapillary_filtering.py  test_mapillary_geographic_filtering.py  test_photo_processing_errors.py  test_rate_limiting.py  test_reset_upload_poll.py  test_secure_upload_workflow.py  test_secure_upload_workflow_old.py  test_security.py  test_security_utils.py  test_upload.py  test_user_profile.py  test_utils.py
backend/tests/integration/: test_activity_feed.py  test_annotations.py  test_anonymization_override_roundtrip.py  test_api.py  test_auth_login.py  test_auth_oauth.py  test_auth_token_lifecycle.py  test_backend_lock.py  test_background_location_provenance.py  test_cleanup_orphaned.py  test_contact_form.py  test_content_filtering.py  test_flagged_photos.py  test_hidden_db_operations.py  test_hidden_photos.py  test_hidden_users.py  test_hillview.py  test_hillview_filtering.py  test_mapillary_cache_debug.py  test_mapillary_cache_spatial_sampling.py  test_mapillary_filtering.py  test_mapillary_geographic_filtering.py  test_mapillary_marker_consistency.py  test_multi_client_uploads.py  test_oauth_state_csrf.py  test_parallel_photo_uploads.py  test_photo_deletion.py  test_photo_in_front_persistence.py  test_photo_pagination.py  test_photo_processing_errors.py  test_photo_ratings_integration.py  test_photo_sharing.py  test_push_notifications.py  test_rate_limiting.py  test_rating_system.py  test_reset_upload_poll.py  test_secure_upload_workflow.py  test_security_integration.py  test_stream_auth.py  test_timeline.py  (+7 more)
backend/tests/unit/: test_auth_edge_cases.py  test_security_unit.py
backend/tests/utils/: api_client.py  auth_utils.py  base_test.py  crypto_utils.py  debug_utils.py  image_utils.py  run_hidden_tests.py  secure_upload_utils.py  test_utils.py
backend/worker/: .env.example  Dockerfile  anonymize.py  anonymize_cli.py  app.py  bind_first.py  blur.py  boot.py  cdn_uploader.py  detections.py  entrypoint-root.sh  exceptions.py  import.py  jwt_service.py  logging_context.py  photo_processor.py  photo_processor_service.py  processing_state.py  pyproject.toml  requirements.txt  run_tests.sh  run_unit_tests.sh  security_utils.py  start.sh  start2.sh  throttle.py  worker_processing.py
backend/worker/tests/unit/: test_anonymize.py  test_backpressure.py  test_blur.py  test_blur_apply.py  test_photo_processor.py  test_worker_pool.py
enrich/api/: Dockerfile  pyproject.toml
enrich/api/app/: actors.py  calibrate.py  config.py  db.py  facts.py  geocode.py  graph.py  main.py  matching.py  parser.py  runs.py  sync.py  tables.py  triangulate.py
enrich/api/app/routers/: annotations.py  calibrate.py  facts.py  geocode.py  graduation.py  health.py  matching.py  parse.py  photos.py  poi.py  proto.py  runs.py  sparql.py  sync.py
enrich/api/app/tests/: test_graduation.py  test_parser.py
frontend/src-tauri/: Cargo.toml  build.rs  tauri.android-dev.conf.json  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  device_photos.rs  lib.rs  photo_exif.rs  sensor_plugin.rs  types.rs
frontend/tauri-plugin-hillview/: Cargo.toml  README.md  build.rs  package.json
frontend/tauri-plugin-hillview/android/: build.gradle.kts
frontend/tauri-plugin-hillview/examples/tauri-app/: package.json
frontend/tauri-plugin-hillview/guest-js/: index.ts
frontend/tauri-plugin-hillview/permissions/: default.toml
frontend/tauri-plugin-hillview/permissions/autogenerated/: reference.md
frontend/tauri-plugin-hillview/permissions/schemas/: schema.json
frontend/tauri-plugin-hillview/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  shared_types.rs
scripts/geotag/: dump.py  exif.py  geo_tag.py  geo_tag.sh  geo_tag_photos.py  pull.sh  pyproject.toml  qr_time_correction.py  spread.py  url_to_exif.py
scripts/geotag/hillview_geotag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1052 files in other folders)
