[project]
name = "enrich-api"
version = "0.1.0"
description = "Hillview Enrichment Workbench API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "geoalchemy2>=0.15",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "remoulade[rabbitmq,limits]>=7",   # extras: broker.py needs limits, RabbitmqBroker needs amqpstorm
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
