[package]
name = "hillview"
version = "0.1.0"
description = "HillView - map with directional photos"
authors = ["koo5"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
chrono = "0.4.40"
                                              

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
# tauri-plugin-log = "2"  # Disabled to prevent duplicate console logs
tauri-plugin-fs = "2"
tauri-plugin-hillview = { path = "../tauri-plugin-hillview" }
img-parts = "0.3"
chrono = "0.4"
image = "0.24"
md5 = "0.7"
uuid = { version = "1.6", features = ["v4"] }
kamadak-exif = "0.5"
android_logger = "0.15.1"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
dirs = "5.0"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
